Fixed viewport issue for the skills section where it would overlap with the Contact page on certain screen resolutions

--- a/public/css/scrolling-nav.css
+++ b/public/css/scrolling-nav.css
@@ -32,7 +32,7 @@ The padding is very important to make sure the scrollspy picks up the right area
 of those sections to manage the look and feel of the site. */
 
 .intro-section {
-    height: 100%;
+    height: 100vh;
     max-height: 100%;
     padding-top: 150px;
     text-align: center;
@@ -41,21 +41,21 @@ of those sections to manage the look and feel of the site. */
 }
 
 .about-section {
-    height: 100%;
+    height: 100vh;
     padding-top: 150px;
     text-align: center;
     background: #eee;
 }
 
 .skills-section {
-    height: 100%;
+    height: 120vh;
     padding-top: 150px;
     text-align: center;
     background: #fff;
 }
 
 .contact-section {
-    height: 100%;
+    height: 100vh;
     padding-top: 150px;
     text-align: center;
     background: #eee;
